--- a/src/style/sections/_profile-edit.scss
+++ b/src/style/sections/_profile-edit.scss
@@ -22,7 +22,7 @@
 .profile-edit-body {
   width: 100%;
   margin-bottom: 65px;
-  padding: 0px 20px 25px 20px;
+  padding: 0 20px 25px 20px;
   border-radius: 5px;
   background-color: #fff;
 }
@@ -40,9 +40,10 @@
   padding-bottom: 20px;
   border-bottom: 1px solid #e4e4f2;
 }
-.profile-edit__form-top--second{
-  border-bottom:none;
-  padding-bottom:0;
+
+.profile-edit__form-top--last {
+  padding-bottom: 0;
+  border-bottom: none;
 }
 
 .profile-edit__form-row {
@@ -112,6 +113,20 @@
   background-position: calc(100% - 15px) 50%;
 
   appearance: none;
+}
+
+.profile-edit__form-textarea {
+  font-size: 14px;
+  font-weight: 300;
+  overflow: hidden;
+  width: 100%;
+  height: 80px;
+  padding: 15px 0 15px 20px;
+  opacity: 1;
+  color: #1e1e1e;
+  border: 0;
+  border-radius: 18px !important;
+  background-color: #f0f0f5;
 }
 
 .profile-edit__form-ava {
@@ -309,6 +324,7 @@
 .profile-edit__form-footer--next {
   min-width: 185px;
   margin-left: auto;
+
   @include max(500) {
     min-width: 120px;
   }
@@ -316,6 +332,7 @@
 
 .profile-edit__form-footer--prev {
   min-width: 185px;
+
   @include max(500) {
     min-width: 120px;
   }
@@ -338,5 +355,68 @@
     font-size: 11px;
     font-weight: 300;
     color: #4d4ce0;
+  }
+}
+
+.profile-edit__radio-row {
+  display: flex;
+  justify-content: space-around;
+  padding: 25px 0 26px 0;
+  border-bottom: 1px solid #e4e4f2;
+
+  @include max(680) {
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    padding-bottom: 15px;
+  }
+}
+
+.profile-edit__radio-row-label {
+  position: relative;
+  display: flex;
+  align-items: flex-start;
+  padding: 0 10px;
+  cursor: pointer;
+
+  @include max(680) {
+    margin-bottom: 15px;
+  }
+  &::before {
+    position: absolute;
+    top: 1px;
+    left: 0;
+    width: 16px;
+    height: 16px;
+    content: '';
+    border: 4px solid #f0f0f5;
+    border-radius: 50%;
+    background-color: #f0f0f5;
+  }
+  &::after {
+    position: absolute;
+    top: 5px;
+    left: 4px;
+    width: 8px;
+    height: 8px;
+    content: '';
+    opacity: 0;
+    border-radius: 50%;
+    background-color: $highlight-v;
+  }
+  &.active {
+    &::after {
+      opacity: 1;
+    }
+  }
+
+  span {
+    font-size: 14px;
+    font-weight: 300;
+    display: block;
+    margin-left: 10px;
+    color: #1e1e1e;
+  }
+  input {
+    opacity: 0;
   }
 }
