--- a/src/pug/pages/profile-6.pug
+++ b/src/pug/pages/profile-6.pug
@@ -13,7 +13,7 @@ block content
     main.main
       include ../sections/profile-header
       include ../sections/profile-top
-      include ../sections/profile-counters
+      //-include ../sections/profile-counters
       .profile-main
         .container
           include ../sections/profile-aside
