--- a/src/style/elements/_profile-aside-friends.scss
+++ b/src/style/elements/_profile-aside-friends.scss
@@ -49,3 +49,16 @@
   font-weight: 300;
   color: #1e1e1e;
 }
+
+.profile-aside__friends-none-text{
+  padding: 0 20px;
+  display: block;
+  color: #99a1ba;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 22px;
+}
+.profile-aside__friends-add-btn{
+  min-width: 185px;
+  margin: 20px 0 20px 20px;
+}
