--- a/src/style/sections/_profile-header.scss
+++ b/src/style/sections/_profile-header.scss
@@ -6,6 +6,7 @@
     align-items: center;
     padding-top: 12px;
     padding-bottom: 12px;
+
     @include max(760) {
       flex-wrap: wrap;
       max-width: 570px;
@@ -23,6 +24,7 @@
   height: 36px;
   border: 1px solid rgba(255, 255, 255, .4);
   border-radius: 18px;
+
   @include max(760) {
     margin-bottom: 15px;
   }
@@ -31,11 +33,11 @@
 .profile-header__search-input {
   font-size: 14px;
   width: 100%;
-  padding-left: 25px;
+  margin-right: 10px;
   margin-left: 15px;
+  padding-left: 25px;
   color: #fff;
   border: none;
-  margin-right: 10px;
   background-color: transparent;
   box-shadow: none;
 
@@ -66,48 +68,50 @@
     pointer-events: none;
   }
 }
+
 .profile-header__search-selectbox {
+  position: relative;
   flex: none;
   width: 155px;
-  position: relative;
   &::before {
-    content: '';
     position: absolute;
     top: 0;
-    left: 0;
     bottom: 0;
-    margin: auto;
+    left: 0;
     width: 1px;
     height: 14px;
+    margin: auto;
+    content: '';
+    opacity: .4;
     background-color: #fff;
-    opacity: 0.4;
   }
   select {
-  border: none;
+    width: 100%;
     height: 36px;
     padding-left: 15px;
-    width: 100%;
-    background-color: transparent;
-    appearance: none;
-    color: #fff;
     cursor: pointer;
+    color: #fff;
+    border: none;
+    background-color: transparent;
+
+    appearance: none;
   }
-    option:not(:first-of-type) {
+  option:not(:first-of-type) {
     color: $text;
   }
-  option[selected]{
+  option[selected] {
     display: none !important;
   }
   svg {
-    width: 10px;
-    height: 5px;
-    fill:#fff;
-    pointer-events: none;
     position: absolute;
     top: 0;
-    bottom: 0;
     right: 15px;
+    bottom: 0;
+    fill: #fff;
+    width: 10px;
+    height: 5px;
     margin: auto;
+    pointer-events: none;
   }
 }
 
@@ -125,10 +129,10 @@
   flex: none;
   padding: 0;
   list-style: none;
-  &:last-child{
-.profile-header__icons-link {
-  margin-right: 0;
-}
+  &:last-child {
+    .profile-header__icons-link {
+      margin-right: 0;
+    }
   }
 }
 
@@ -140,9 +144,10 @@
   margin-left: 26px;
   text-decoration: none;
   color: #fff;
+
   @include max(760) {
-    margin-left: 0;
     margin-right: 25px;
+    margin-left: 0;
   }
   &:hover,
   &.active {
@@ -195,8 +200,8 @@
 .profile-header__user {
   display: flex;
   align-items: center;
-  margin-left: auto;
   flex: none;
+  margin-left: auto;
 }
 
 .profile-header__user-ava {
@@ -206,6 +211,12 @@
   height: 36px;
   margin-right: 15px;
   border-radius: 50%;
+  background-color: #f0f0f5;
+  background-image: url('../img/smile.svg');
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: 65%;
+
   @include max(375) {
     display: none;
   }
