change classes in main section

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -7,11 +7,11 @@ block variables
   - var ogimage     = 'assets/img/social.jpg'
 
 block content
-  .main-wrap.index
+  .main-wrap
     include ../sections/header
 
     //begin content
-    section.main
+    section.main.index
     //end content
 
     include ../sections/footer
