--- a/src/pug/pages/profile-6-open.pug
+++ b/src/pug/pages/profile-6-open.pug
@@ -6,14 +6,13 @@ block variables
   - var ogtitle     = 'Master Vision'
 
 block content
-  .main-wrap.profile
+  .main-wrap
     include ../sections/header
 
     //begin content
-    main.main
+    main.main.profile
       include ../sections/profile-header
       include ../sections/profile-top
-      //-include ../sections/profile-counters
       .profile-main
         .container
           include ../sections/profile-aside
