--- a/src/pug/pages/profile-edit.pug
+++ b/src/pug/pages/profile-edit.pug
@@ -16,11 +16,11 @@ block variables
   - var ogtitle     = 'Master Vision'
 
 block content
-  .main-wrap.profile-edit
+  .main-wrap
     include ../sections/header
 
     //begin content
-    main.main
+    main.main.profile-edit
       include ../sections/profile-header
       .container.profile-edit__header
         h2.profile-edit__title Редактирование профиля
