--- a/src/pug/pages/profile-empty.pug
+++ b/src/pug/pages/profile-empty.pug
@@ -6,11 +6,11 @@ block variables
   - var ogtitle     = 'Master Vision'
 
 block content
-  .main-wrap.profile-empty
+  .main-wrap
     include ../sections/header
 
     //begin content
-    main.main
+    main.main.profile-empty
       include ../sections/profile-header-empty
       include ../sections/profile-top-empty
       .profile-main
