--- a/src/pug/pages/profile-wallpappers.pug
+++ b/src/pug/pages/profile-wallpappers.pug
@@ -6,11 +6,11 @@ block variables
   - var ogtitle     = 'Master Vision'
 
 block content
-  .main-wrap.profile
+  .main-wrap
     include ../sections/header
 
     //begin content
-    main.main
+    main.main.profile
       include ../sections/profile-header
       //begin profile-top
       .profile-top(style="background-image:url('assets/img/bg-profile-top-2.jpg')")
