--- a/src/pug/sections/profile-article-footer.pug
+++ b/src/pug/sections/profile-article-footer.pug
@@ -3,6 +3,8 @@ footer.profile-article__footer
   form.profile-article__form
     .profile-article__form-input-wrap
       input(placeholder='Написать комментарий').profile-article__form-input
+      .profile-article__form-photo
+        +svg('photo')
       .profile-article__form-smile
         +svg('smile')
       .profile-article__form-submit-wrap
