--- a/src/style/sections/_profile-article.scss
+++ b/src/style/sections/_profile-article.scss
@@ -174,6 +174,18 @@
   }
 }
 
+.profile-article__icon-star {
+  svg {
+    width: 26px;
+    height: 24px;
+  }
+  &.active {
+    .svg-star {
+      fill: $highlight-v;
+    }
+  }
+}
+
 .profile-article__icons-count {
   font-size: 16px;
   margin-left: 9px;
