--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -39,3 +39,4 @@
 @import 'pages/profile-money';
 @import 'pages/profile-invite';
 @import 'pages/profile-friends';
+@import 'pages/profile-new-article';
