did new-article page

--- a/src/pug/pages/profile-new-article.pug
+++ b/src/pug/pages/profile-new-article.pug
@@ -67,6 +67,76 @@ block content
       .container.profile-new-article-body
         //begin profile-new-article__article
         .profile-new-article__article
+
+          //begin profile-new-article__article-tools
+          .profile-new-article__article-tools
+            ul.profile-article__form-decor-list
+              li.profile-article__form-decor-item.decor-01
+                +svg('decor-01')
+              li.profile-article__form-decor-item.decor-02
+                +svg('decor-02')
+              li.profile-article__form-decor-item.decor-03.double
+                +svg('decor-03')
+              li.profile-article__form-decor-item.double
+                span 15
+                .profile-article__form-decor-double-arrow
+                  .profile-article__form-decor-arrow
+                    +svg('arr-down')
+                  .profile-article__form-decor-arrow
+                    +svg('arr-down')
+              li.profile-article__form-decor-item.decor-04
+                +svg('decor-04')
+              li.profile-article__form-decor-item.decor-05
+                +svg('decor-05')
+              li.profile-article__form-decor-item.decor-06
+                +svg('decor-06')
+              li.profile-article__form-decor-item.decor-07.double
+                +svg('decor-07')
+              li.profile-article__form-decor-item.decor-08
+                +svg('decor-08')
+                .profile-article__form-decor-arrow
+                  +svg('arr-down')
+              li.profile-article__form-decor-item.decor-09
+                +svg('decor-09')
+                .profile-article__form-decor-arrow
+                  +svg('arr-down')
+              li.profile-article__form-decor-item.decor-12
+                +svg('decor-12')
+                .profile-article__form-decor-arrow
+                  +svg('arr-down')
+              li.profile-article__form-decor-item.decor-15
+                +svg('decor-15')
+              li.profile-article__form-decor-item.decor-16
+                +svg('decor-16')
+          //end profile-new-article__article-tools
+
+          h2.profile-new-article__article-title Заголовок
+          p
+            |Включает в себя фундаментальную психологию, выявляющую факты, механизмы и законы психической деятельности, прикладную психологию, изучающую, с опорой на данные фундаментальной психологии, психические явления в естественных условиях, и
+            =' '
+            i практическую психологию, занимающуюся применением психологических знаний на практике.
+
+          .profile-new-article__article-img
+            img(src="assets/img/new-article.jpg" alt="image")
+
+          p
+            |Включает в себя фундаментальную психологию, выявляющую факты, механизмы и законы психической деятельности, прикладную психологию, изучающую, с опорой на данные фундаментальной психологии, психические явления в естественных условиях, и практическую психологию,
+            =' '
+            strong занимающуюся применением
+            =' '
+            |психологических знаний на практике.
+
+          ol.custom-ol
+            li Включает в себя фундамента́льную психологию
+            li Выявляющую факты, механизмы и законы психической деятельности
+            li Прикладну́ю психологию, изучающую, с опорой на данные фундаментальной психологии
+
+          p Включает в себя фундаментальную психологию, выявляющую факты, механизмы и законы психической деятельности, прикладную психологию, изучающую, с опорой на данные фундаментальной психологии, психические явления в естественных условиях, и практическую психологию, занимающуюся применением психологических знаний на практике.
+
+          ul.custom-ul
+            li Включает в себя фундамента́льную психологию
+            li Выявляющую факты, механизмы и законы психической деятельности
+            li Прикладну́ю психологию, изучающую, с опорой на данные фундаментальной психологии
         //end profile-new-article__article
 
         //begin profile-new-article__aside
