--- a/src/style/sections/_profile-article-footer.scss
+++ b/src/style/sections/_profile-article-footer.scss
@@ -141,6 +141,14 @@
     width: 17px;
     height: 15px;
   }
+  &.decor-15 > svg {
+    width: 16px;
+    height: 16px;
+  }
+  &.decor-16 > svg {
+    width: 18px;
+    height: 14px;
+  }
 }
 
 .profile-article__form-decor-arrow {
