--- a/src/style/sections/_profile-edit.scss
+++ b/src/style/sections/_profile-edit.scss
@@ -3,8 +3,8 @@
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
-  padding-top: 27px;
-  padding-bottom: 17px;
+  padding-top: 17px;
+  padding-bottom: 7px;
 }
 
 .profile-edit__title {
@@ -16,7 +16,8 @@
 }
 
 .profile-edit__return-btn {
-  margin-bottom: 10px;
+  margin-bottom: 20px;
+  margin-top: 10px;
 }
 
 .profile-edit-body {
