--- a/src/style/elements/_breadcrumbs.scss
+++ b/src/style/elements/_breadcrumbs.scss
@@ -7,14 +7,17 @@
 
 .breadcrumbs__item {
   position: relative;
+  padding: 0;
   list-style: none;
   &::after {
     font-size: 12px;
     margin: 0 3px 0 4px;
     content: '/';
+    color: $light;
   }
   &:last-child {
     .breadcrumbs__link {
+      font-weight: 500;
       text-decoration: none;
       pointer-events: none;
     }
@@ -26,9 +29,14 @@
 
 .breadcrumbs__link {
   font-size: 12px;
+  font-weight: 300;
+  line-height: 1;
   white-space: nowrap;
-  color: #403549;
+  text-decoration: none;
+  color: $light;
+
   &:hover {
     text-decoration: none;
+    color: $light;
   }
 }
