--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -15,7 +15,7 @@
 @import 'elements/breadcrumbs';
 //@import 'elements/pagination';
 //@import 'elements/popup';
-//@import 'elements/slickBase';
+@import 'elements/slickBase';
 
 //sections
 @import 'sections/footer';
