--- a/src/style/sections/_profile-header.scss
+++ b/src/style/sections/_profile-header.scss
@@ -123,6 +123,10 @@
   align-items: center;
   margin: 0 20px 0 0;
   padding: 0;
+  @include max(375) {
+  margin: 10px auto 10px 0;
+    padding-right: 10px;
+  }
 }
 
 .profile-header__icons-item {
@@ -202,6 +206,9 @@
   align-items: center;
   flex: none;
   margin-left: auto;
+  @include max(375) {
+    margin: 10px 0;
+  }
 }
 
 .profile-header__user-ava {
@@ -216,10 +223,6 @@
   background-repeat: no-repeat;
   background-position: 50% 50%;
   background-size: 65%;
-
-  @include max(375) {
-    display: none;
-  }
 }
 
 .profile-header__user-body {
